Refactor: modified page title and heading from sydnyofficial to sydnydre. Also modified bio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sydny Official</title>
+  <title>Sydny Dre</title>
   <link rel="icon" type="image/png" href="gig/sydny-favicon.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -22,7 +22,7 @@
 
       <nav class="navbar navbar-expand-sm navbar-light mb-5 fixed-top">
         <div class="container  ">
-          <a class="navbar-brand" href="#">Sydny</a>
+          <a class="navbar-brand" href="#">SydnyDre</a>
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon btn btn-light"></span>
           </button>
@@ -54,13 +54,17 @@
         </div>
       </nav>
 
-      <div class="">
-        <div class="container col-md-6 mt-5 p-5">
+      <div id="header-text">
+        <div class="container col-md-8 mt-5 p-5">
           <br><br>
           <p class="text-light g-bg-transparent p-5">
-            Sydny is a Nigerian alternative hip-hop artiste and indie music producer. He combines hip-hop and folk
-            elements in his music, with a baritone-voiced poetic lyricism. His unique style and expression appeals to an
-            audience of young millennials who can relate to the regular struggles of his not-so-regular life.
+            With his dark sultry vocals, captivating storytelling, and catchy rhythms, Sydny Dre is a fast-rising 
+            singer/songwriter, multi-instrumentalist and music producer from Nigeria telling his story and sharing 
+            his perspective with the world through relatable music. Armed with poetic lyricism and a sexy, chill 
+            sound that complements his personality, his unique blend of afro-fusion born from his afro-percussive 
+            roots as a child-drummer and teenage enthusiasm for Hip-hop and R&B, is unlike any other that exists or
+            has existed before. He is definitely an artist to watch out for as he leaves memorable impressions on 
+            his listeners in every song.
           </p>
           <br>
         </div>
