Refactor: modified embedded video to be that of 'hustle up'

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
               <hr class="bg-warning my-0 underline float-left">
             </div>
             <div class="card-body embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" width="560" src="https://www.youtube.com/embed/WA8vJAqIPMQ"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/gfySo0OBWC4?controls=0" 
+              title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+               encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
 
