refactor: Modified the music section. Updated to spotify preview and added fanlink

--- a/index.html
+++ b/index.html
@@ -37,18 +37,6 @@
               <li class="nav-item mx-3 ">
                 <a class="nav-link text-light" href="#gallery">Gallery</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link text-light" href="#">Tracks</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="#">Pages</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-light" href="#">Contact</a>
-              </li> -->
             </ul>
           </div>
         </div>
@@ -86,34 +74,51 @@
                encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
-
-
-          <!-- my music section -->
-          <div class="card col-md-4 bg-transparent text-light">
-            <div class="card-header">
-              <h4 class="my-0">MY</h4>
-              <h4 class="mt-0">MUSIC</h4>
-              <hr class="bg-warning my-0 underline float-left">
+        </div>
+        <!-- my music section -->
+        <div class="card g-bg-transparent">
+          <div class="card-header  text-light">
+            <h4 class="my-0">MY</h4>
+            <h4 class="mt-0">MUSIC</h4>
+            <hr class="bg-warning my-0 underline float-left">
+          </div>
+        <div class="card-body mb-5 pb-5 row justify-content-around ">
+          <div class="card col-md-5 bg-transparent text-light">
+            <div class="card-body col-md embed-responsive embed-responsive-16by9">
+              <!--Hustle up-->
+              <iframe 
+                style="border-radius:12px" 
+                src="https://open.spotify.com/embed/track/7jAwMp9Wy1P9DL27fEke6Q?utm_source=generator" 
+                width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; 
+                clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+              </iframe>
             </div>
-            <div class="card-body embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" width="100%" height="100%" scrolling="no" frameborder="no"
-                allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/464684268&color=%2333322e&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-              <div
-                style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                <a href="https://soundcloud.com/sydnyofficial" title="Sydny" target="_blank"
-                  style="color: #cccccc; text-decoration: none;">Sydny</a> · <a
-                  href="https://soundcloud.com/sydnyofficial/the-train" title="The Train" target="_blank"
-                  style="color: #cccccc; text-decoration: none;">The Train</a></div>
-
+            <div class="text-center">
+              <a href="https://sydnydre.fanlink.to/hustle-up" class="card-link nav-link text-light">Click here for Fanlink</a>
             </div>
           </div>
+              
+          <div class="card col-md-5 bg-transparent text-light">
+            <div class="card-body col-md embed-responsive embed-responsive-16by9">
+              <!--Roll it-->
+              <iframe 
+                style="border-radius:12px" 
+                src="https://open.spotify.com/embed/track/7GFmc7vNjH1fg8BzFu81KG?utm_source=generator" 
+                width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; 
+                clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+              </iframe>
+            </div>
+            <div class="text-center">
+              <a href="https://sydnydre.fanlink.to/roll-it" class="card-link nav-link text-light">Click here for Fanlink</a>
+            </div>
+          </div> 
         </div>
+      </div>
 
       </section>
 
       <section>
-        <div class="container  g-bg-transparent mb-3 pb-3">
+        <div class="container  mt-4 g-bg-transparent mb-3 pb-3">
           <form action="">
             <div class="form-group col-md-10 mx-auto">
               <label class="mb-0" for="name">
@@ -125,6 +130,7 @@
             </div>
           </form>
         </div>
+
       </section>
 
       <div id="slider1" class="carousel slide my-5" data-ride="carousel">
