refactor: replaced gallery entirely. Upated page heading to Sydny Dre

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <nav class="navbar navbar-expand-sm navbar-light mb-5 fixed-top">
         <div class="container  ">
-          <a class="navbar-brand" href="#">SydnyDre</a>
+          <a class="navbar-brand" href="#">Sydny Dre</a>
           <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon btn btn-light"></span>
           </button>
@@ -164,6 +164,18 @@
               </div>
               <div class="carousel-item g-img">
                 <img class="d-block img-fluid mx-auto" width="80%" height="80%" src="gig/syd6.jpg" alt="Third Slide">
+              </div>
+              <div class="carousel-item g-img">
+                <img class="d-block img-fluid mx-auto" width="80%" height="80%" src="gig/syd7.jpg" alt="Third Slide">
+              </div>
+              <div class="carousel-item g-img">
+                <img class="d-block img-fluid mx-auto" width="80%" height="80%" src="gig/syd8.jpg" alt="Third Slide">
+              </div>
+              <div class="carousel-item g-img">
+                <img class="d-block img-fluid mx-auto" width="80%" height="80%" src="gig/syd9.jpg" alt="Third Slide">
+              </div>
+              <div class="carousel-item g-img">
+                <img class="d-block img-fluid mx-auto" width="80%" height="80%" src="gig/syd10.jpg" alt="Third Slide">
               </div>
 
               <a href="#slider1" class="carousel-control-prev" data-slide="prev">
