refactor: repoint social media links to sydny dre account

--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
           <div class="container">
             <!-- <div class="row"> -->
             <div class="col-md-6 col-sm-8 mx-auto py-4 text-center">
-              <a href="https://www.facebook.com/sydnyofficial" target="_blank"><i
+              <a href="https://www.facebook.com/sydnydre" target="_blank"><i
                   class="fab fa-facebook icons mx-2"></i></a>
-              <a href="https://twitter.com/sydnyofficial" target="_blank"><i class="fab fa-twitter icons mx-2"></i></a>
-              <a href="https://itunes.apple.com/ng/artist/sydny/1064985202" target="_blank"><i
+              <a href="https://twitter.com/sydnydre" target="_blank"><i class="fab fa-twitter icons mx-2"></i></a>
+              <a href="https://itunes.apple.com/ng/artist/sydny-dre/1653806743" target="_blank"><i
                   class="fab fa-apple icons mx-2"></i></a>
-              <a href="https://www.instagram.com/sydnyofficial" target="_blank"><i
+              <a href="https://www.instagram.com/sydnydre" target="_blank"><i
                   class="fab fa-instagram icons mx-2"></i></a>
-              <a href="https://soundcloud.com/sydnyofficial" target="_blank"><i
+              <a href="https://soundcloud.com/sydnydre" target="_blank"><i
                   class="fab fa-soundcloud icons mx-2"></i></a>
-              <a href="https://open.spotify.com/artist/77xkDuMgZ8Egd9ioBw4qu7" target="_blank"><i
+              <a href="https://open.spotify.com/artist/5BAYtd6F7yF4gthwLF7iY3" target="_blank"><i
                   class="fab fa-spotify icons mx-2"></i></a>
             </div>
             <!-- </div> -->
